2009-02-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* configure.in: Add --with-mcs-docs to make it possible to disable building of documentation under mcs.

2009-01-29  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Remove -Wcast-align from the warning list, it leads to a lot of
	useless warnings which can only be fixed by casting a pointer to (void*).

2009-01-29  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Add a couple of new AM conditionals for POSIX and
	DARWIN, these are used to conditionally include some files in
	mono/mini. 

2009-01-27  Jb Evain  <jbevain@novell.com>

	* configure.in: bump Mono's version to 2.5 now that 2.4
	has been branched.

2009-01-25  Zoltan Varga  <vargaz@gmail.com>

	* acinclude.m4 (dolt_supported): Handle ARM as well.

2009-01-23  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Make --enable-parallel-mark=yes the default.

2009-01-17  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Complete the OPROFILE checks.

2009-01-16  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Avoid error messages in the quiet code if libgc/Makefile
	does not exist yet. Fixes #466814.

2009-01-09  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Check for the existence of the gettext executables.

2008-01-08  Christian Prochnow  <cproch@seculogix.de>

	* configure.in: Check for sys/statfs.h and sys/mount.h

2009-01-07  Geoff Norton  <gnorton@novell.com>

	* configure.in: Provide platform information to the mcs build tree

2009-01-06  Jb Evain  <jbevain@novell.com>

	* scripts/Makefile.am: don't generate a script for the now
	dead mono-api-diff.

2008-12-05  Jonathan Pryor  <jpryor@novell.com>

	* man/mdoc-update.1: Document -fno-assembly-versions.

2009-01-05  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Disable sigaltstack on freebsd as it doesn't seem to work.

2008-12-16  Marek Habersack  <mhabersack@novell.com>

	* data/system.web.extensions.design_1.0.pc.in: added

	* data/Makefile.am (EXTRA_DIST): added