@@ -69,6 +69,7 @@ case "$host" in
 		platform_win32=yes
 		AC_DEFINE(PLATFORM_WIN32,1,[Platform is Win32])
 		AC_DEFINE(DISABLE_PORTABILITY,1,[Disable the io-portability layer])
+		AC_DEFINE(PLATFORM_NO_SYMLINKS,1,[This platform does not support symlinks])
 		if test "x$cross_compiling" = "xno"; then
 			CC="gcc -mno-cygwin -g"
 			# So libgc configure gets -mno-cygwin
