@@ -1,3 +1,8 @@
+2009-02-03  Miguel de Icaza  <miguel@novell.com>
+
+	* configure.in (PLATFORM_NO_SYMLINKS): New define that replaces
+	PLATFORM_WIN32.
+
 2009-02-02  Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* configure.in: Add --with-mcs-docs to make it possible to disable building of documentation under mcs.
